Fixed some very minor issues

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chalk CSS - Simple and Clean</title>
-    <link rel="stylesheet" href="css/chalk.css">
+    <link rel="stylesheet" href="css/chalk.min.css">
     <style>
         .brand {
             margin: 100px 0px;
@@ -91,7 +91,7 @@
 
             <p class="description">Clone the project from github:</p>
             <div class="code">
-                <p>$ git clone https://github.com/rowanryan/chalkcss</p>
+                <p>$ git clone https://github.com/rowanryan/chalkcss.git</p>
             </div>
         </div>
 
