Added link to github repo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         <div class="section">
             <h1 class="size-4">How to install Chalk CSS</h1>
 
-            <p class="description">Clone the project from github:</p>
+            <p class="description">Clone the project from
+                <a href="https://github.com/rowanryan/chalkcss" class="primary">github</a>:</p>
             <div class="code">
                 <p>$ git clone https://github.com/rowanryan/chalkcss.git</p>
             </div>
