Fixed code block at grid section

--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
             &lt;div class="col col-3"&gt;
                 &lt;p&gt;.col col-3&lt;/p&gt;
             &lt;/div&gt;
-    &lt;/div&gt;
-    </code></pre>
+&lt;/div&gt;</code></pre>
             </div>
 
             <br>
