Fixed spelling issue on docs

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
             <p class="description">
                 Forms are an essential part of every CSS framework. Chalk CSS keeps it simple and clean. Every group of inputs are wrapped
-                by form field. Form fields are made by adding
+                by a form field. Form fields are made by adding
                 <span class="command">form-field</span> as a class to a div. Inline fields are also available. To make a field inline, add the
                 <span class="command">inline</span> class to the form field. Inputs must always have the class
                 <span class="command">input</span> assigned to have the styling applied.
